--- a/css/styles.css
+++ b/css/styles.css
@@ -141,3 +141,31 @@ header.normal-position{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+/* Kontakt */
+
+/* Main */
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #222;
+    border-radius: 4px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+}
+
+input[type=submit] {
+    background-color: #fff387;
+    color: #222;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #222;
+    color: #fff;
+}
