Responsive across mobile and tablet devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ header{
     flex-direction: column;
     color: #fff;
     text-align: center;
+    padding: 0 1rem;
 }
 
 #hero h2{
@@ -87,7 +88,7 @@ header{
 }
 
 #hero p{
-    max-width: 30%;
+    max-width: 50%;
     margin: 2rem auto;
 }
 
@@ -117,20 +118,17 @@ header.normal-position{
 
 .flex-container{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .flex-container div{
-    padding: 2rem;
     flex-basis: 50%;
+    padding: 2rem;
 }
 
 .flex-container div h3{
     text-decoration: underline;
     margin-bottom: 1rem;
-}
-
-#info-main{
-    color: #222;
 }
 
 .parallax{
@@ -144,7 +142,6 @@ header.normal-position{
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 
 /* Kontakt */
 
@@ -170,13 +167,14 @@ header.normal-position{
 
 #kontakt-main{
     margin: 4rem auto;
+    padding: 2rem;
 }
 
 #kontakt-main h1{
     margin-bottom: 2rem;
 }
 
-input[type=text], input[type=email], select, textarea {
+input[type=text], input[type=email], select, textarea{
     width: 100%;
     padding: 12px;
     border: 1px solid #222;
@@ -185,7 +183,7 @@ input[type=text], input[type=email], select, textarea {
     margin-bottom: 16px;
 }
 
-input[type=submit] {
+input[type=submit]{
     background-color: #fff387;
     color: #222;
     padding: 16px;
@@ -194,7 +192,45 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover{
     background-color: #222;
     color: #fff;
+}
+
+/* Mobile */
+
+@media screen and (max-width: 600px){
+
+    /* Forside */
+
+    #hero h2{
+        font-size: 2rem;
+    }
+
+    #info-button{
+        padding: 6px;
+    }
+
+    /* Info */
+
+    .flex-container div{
+        flex-basis: 100%;
+    }
+
+    /* Kontakt */
+
+    .parallax-2 h2{
+        font-size: 2rem;
+    }
+
+}
+
+/* Tablet */
+
+@media screen and (max-width: 992px){
+
+    #hero p{
+        max-width: 100%;
+    }
+
 }
