Added mobile menu, needs js

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,21 @@ a{
 
 /* Header */
 
+#hamburger{
+    display: none;
+    align-items: flex-end;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+#hamburger span{
+    background-color: #222;
+    width: 2rem;
+    height: 0.2rem;
+    margin: 0.26rem 0;
+    display: block;
+}
+
 header{
     background: #fff387;
     padding: 1rem;
@@ -197,6 +212,25 @@ input[type=submit]:hover{
     color: #fff;
 }
 
+/* X-Small Screen */
+
+@media screen and (max-width: 300px){
+
+    #hero h2{
+        font-size: 1.2rem !important;
+    }
+
+    #hero p{
+        font-size: 0.8rem;
+    }
+
+    #info-button{
+        padding: 4px;
+        font-size: 0.9rem;
+    }
+
+}
+
 /* Mobile */
 
 @media screen and (max-width: 600px){
@@ -228,6 +262,21 @@ input[type=submit]:hover{
 /* Tablet */
 
 @media screen and (max-width: 992px){
+
+    /* Header */
+
+    #hamburger{
+        display: flex;
+    }
+
+    #menu nav ul{
+        display: none;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 1rem;
+    }
+
+    /* Forside */
 
     #hero p{
         max-width: 100%;
