Made input fields require values

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,18 @@ a{
     display: flex !important;
 }
 
+.red{
+    color: red;
+}
+
+.hidden{
+    display: none;
+}
+
+.show{
+    display: block;
+}
+
 /* Header */
 
 #hamburger{
