--- a/css/styles.css
+++ b/css/styles.css
@@ -92,10 +92,8 @@ header{
 /* Main */
 
 #forside-main{
-    background: url("../img/hero-image.jpg");
     height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("../img/hero-image.jpg") no-repeat center;
     background-size: cover;
 }
 
