--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ header.normal-position{
     padding: 2rem;
 }
 
-#kontakt-main h1{
+#kontakt-main h1, #loginMain h1{
     margin-bottom: 2rem;
 }
 
